<resources>
    <string name="app_name">HeartGuide</string>
    <string name="start_timer">Démarrer timer</string>
    <string name="timer_running">Timer en cours…</string>
    <string name="timer_started">Timer démarré pour %1$s!</string>
    <string name="crop_ready">%1$s prêt!</string>
    <string name="crop_ready_message">Votre %1$s est prêt à être récolté.</string>
    <string name="notification_channel_name">Timers HeartGuide</string>
    <string name="notification_channel_description">Notifications pour les timers de cultures</string>
    <string name="growth_time">Temps de croissance: %1$s</string>
    <string name="seed_price">Prix graines: %1$sG</string>
    <string name="sell_price">Prix vente: %1$sG</string>
    <string name="level_required">Niveau %1$s</string>
    <string name="nav_timer">Plantations</string>
    <string name="start_timer_with_time">Démarrer le timer (%1$s)</string>
    <string name="stop_timer">Arrêter le timer</string>
    <string name="stop_timer_with_time">Arrêter (%1$s)</string>
    <string name="time_remaining">%1$s restantes</string>
    <string name="confirm_stop_timer">Arrêter le timer ?</string>
    <string name="confirm_stop_timer_message">Voulez-vous vraiment arrêter le timer pour %1$s ?</string>
    <string name="timer_stopped">Timer arrêté pour %1$s</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">Confirmer</string>
    <string name="active_timers">Timers actifs</string>
    <string name="no_active_timers">Aucun timer actif</string>
    <string name="crop_icon">Icône de la culture</string>
    <string name="favorite">Favori</string>
    <string name="add_to_favorites">Ajouter aux favoris</string>
    <string name="remove_from_favorites">Retirer des favoris</string>
    <string name="search_crops">Rechercher une culture…</string>
    <string name="search_recipes">Rechercher une recette…</string>
    <string name="search_birds">Rechercher un oiseau…</string>
    <string name="filter_by">Filtrer par</string>
    <string name="filter_by_name">Nom</string>
    <string name="filter_by_level">Niveau</string>
    <string name="filter_by_energy">Énergie</string>
    <string name="filter_by_price">Prix de vente</string>
    <string name="sort_ascending">Croissant</string>
    <string name="sort_descending">Décroissant</string>
    <string name="sort_order">Ordre de tri</string>
    <string name="settings">Paramètres</string>
    <string name="language">Langue</string>
    <string name="french">Français</string>
    <string name="english">Anglais</string>
    <string name="change">Changer</string>
    <string name="select_language">Sélectionner la langue</string>
    <string name="theme">Thème</string>
    <string name="dark_mode">Sombre</string>
    <string name="light_mode">Clair</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="notification_type">Type de notifications</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sonore</string>
    <string name="fertilizer">Engrais</string>
    <string name="fertilizer_amount">Quantité d\'engrais</string>
    <string name="fertilizer_amount_hint">Nombre d\'engrais</string>
    <string name="fertilizer_confirm">Confirmer l\'utilisation d\'engrais</string>
    <string name="fertilizer_confirm_message">Utiliser %1$d engrais pour réduire le timer de %2$d minutes ?</string>
    <string name="fertilizer_success">Timer réduit de %1$d minutes</string>
    <string name="crop_test">Test</string>
    <string name="crop_tomato">Tomate</string>
    <string name="crop_potato">Pomme de terre</string>
    <string name="crop_wheat">Blé</string>
    <string name="crop_lettuce">Laitue</string>
    <string name="crop_pineapple">Ananas</string>
    <string name="crop_carrot">Carotte</string>
    <string name="crop_strawberry">Fraise</string>
    <string name="home">Tâches</string>
    <string name="map">Carte</string>
    <string name="map_loading_error">Erreur de chargement de la carte</string>
    <string name="countdown_to_reset">Nouvelles missions dans :</string>
    <string name="access_menus">Accéder aux menus</string>
    <string name="quick_access">Accès rapide</string>
    <string name="go_to_plantation">Aller à Plantation</string>
    <string name="go_to_settings">Aller à Paramètres</string>
    <string name="task_inhabitants">Tâches des habitants</string>
    <string name="task_furniture_shop">Visiter la boutique de meubles</string>
    <string name="task_clothing_shop">Visiter la boutique de vêtements</string>
    <string name="task_feed_animals">Nourrir les animaux sauvages</string>
    <string name="task_collect_oak">Récupérer du bois de chêne glissant</string>
    <string name="task_collect_fluorite">Récupérer de la fluorite</string>
    <string name="task_check_events">Vérifier les tâches des événements</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="delete_task">Supprimer la tâche</string>
    <string name="task_name_hint">Nom de la tâche</string>
    <string name="add">Ajouter</string>
    <string name="recipes">Recettes</string>
    <string name="recipe_home_salad">Salade Maison</string>
    <string name="recipe_home_salad_ingredients">n\'importe quel légume</string>
    <string name="recipe_mixed_jam">Confiture Mélangée</string>
    <string name="recipe_mixed_jam_ingredients">4 fruits différents</string>
    <string name="recipe_blueberry_jam">Confiture de Myrtilles</string>
    <string name="recipe_blueberry_jam_ingredients">4 myrtilles</string>
    <string name="recipe_raspberry_jam">Confiture de Framboises</string>
    <string name="recipe_raspberry_jam_ingredients">4 framboises</string>
    <string name="recipe_apple_jam">Confiture de Pommes</string>
    <string name="recipe_apple_jam_ingredients">4 pommes</string>
    <string name="recipe_tangerine_jam">Confiture de Mandarines</string>
    <string name="recipe_tangerine_jam_ingredients">4 mandarines</string>
    <string name="recipe_tomato_sauce">Sauce Tomate</string>
    <string name="recipe_tomato_sauce_ingredients">4 tomates</string>
    <string name="recipe_fish_and_chips">Poisson et Frites</string>
    <string name="recipe_fish_and_chips_ingredients">2 poissons, 4 pommes de terre</string>
    <string name="recipe_mushroom_pie">Tarte aux Champignons</string>
    <string name="recipe_mushroom_pie_ingredients">2 n\'importe quel champignon, 1 blé, 1 œuf</string>
    <string name="recipe_shiitake_pie">Tarte aux Champignons Shiitake</string>
    <string name="recipe_shiitake_pie_ingredients">2 shiitake, 1 blé, 1 œuf</string>
    <string name="recipe_oyster_mushroom_pie">Tarte aux Champignons Huître</string>
    <string name="recipe_oyster_mushroom_pie_ingredients">2 champignons huître, 1 blé, 1 œuf</string>
    <string name="recipe_black_truffle_pie">Tarte aux Truffes Noires</string>
    <string name="recipe_black_truffle_pie_ingredients">2 truffes noires, 1 blé, 1 œuf</string>
    <string name="recipe_grilled_mushroom_gratin">Gratin de Champignons Grillés</string>
    <string name="recipe_grilled_mushroom_gratin_ingredients">4 champignons</string>
    <string name="recipe_porcini_pie">Tarte aux Champignons Bolets</string>
    <string name="recipe_porcini_pie_ingredients">2 champignons bolets, 1 blé, 1 œuf</string>
    <string name="recipe_grilled_mushroom">Champignon Grillé</string>
    <string name="recipe_grilled_mushroom_ingredients">4 champignons</string>
    <string name="recipe_smoked_fish_bagel">Bagel de Poisson Fumé</string>
    <string name="recipe_smoked_fish_bagel_ingredients">1 poisson, 1 légume, 1 fromage, 1 blé</string>
    <string name="recipe_coffee">Café</string>
    <string name="recipe_coffee_ingredients">4 grains de café</string>
    <string name="recipe_latte">Latte</string>
    <string name="recipe_latte_ingredients">2 grains de café, 2 lait</string>
    <string name="recipe_carrot_cake">Gâteau aux Carottes</string>
    <string name="recipe_carrot_cake_ingredients">2 carottes, 1 œuf, 1 blé</string>
    <string name="recipe_chocolate_sauce">Sauce au Chocolat</string>
    <string name="recipe_chocolate_sauce_ingredients">4 cacao</string>
    <string name="recipe_weird_food">Nourriture Bizarre</string>
    <string name="recipe_weird_food_ingredients">1 recette de nourriture mais faites-la brûler</string>
    <string name="recipe_weird_drink">Boisson Bizarre</string>
    <string name="recipe_weird_drink_ingredients">1 recette de boisson mais faites-la brûler</string>
    <string name="recipe_grilled_porcini">Champignon Bolet Grillé</string>
    <string name="recipe_grilled_porcini_ingredients">4 champignons bolets</string>
    <string name="recipe_grilled_button_mushroom">Champignon Bouton Grillé</string>
    <string name="recipe_grilled_button_mushroom_ingredients">4 champignons bouton</string>
    <string name="recipe_price_na">-</string>
    <string name="recipe_energy_na">-</string>
    <string name="recipe_assortiment_fruit_mer_luxe">Assortiment de fruit de mer de luxe</string>
    <string name="recipe_assortiment_fruit_mer_luxe_ingredients">Crustacé x2 Poisson x2</string>
    <string name="recipe_aubergines_gratinees_bolaignaise">Aubergines gratinées à la bolaignaise</string>
    <string name="recipe_aubergines_gratinees_bolaignaise_ingredients">Aubergine-viande-Huile-Sauce Tomate</string>
    <string name="recipe_bagel_poisson_fume">Bagel au poisson fumé</string>
    <string name="recipe_bagel_poisson_fume_ingredients">1 poisson, 1 fromage, 1 blé, 1 légume</string>
    <string name="recipe_boisson_etrange">Boisson étrange</string>
    <string name="recipe_boisson_etrange_ingredients">Rater n\'importe quelle boisson</string>
    <string name="recipe_burger_viande_fraiche">Burger à la viande fraîche</string>
    <string name="recipe_burger_viande_fraiche_ingredients">x1 Blé x1 Salade x1 Viande x1 Sauce Tomate</string>
    <string name="recipe_cafe_latte">Café latte</string>
    <string name="recipe_cafe_latte_ingredients">2 grains de café, 2 lait</string>
    <string name="recipe_cepes_bordeaux_rotis">Cèpes de bordeaux rôtis</string>
    <string name="recipe_cepes_bordeaux_rotis_ingredients">4 cèpes de bordeaux</string>
    <string name="recipe_champignons_rotis">Champignons rôtis</string>
    <string name="recipe_champignons_rotis_ingredients">4 champignons</string>
    <string name="recipe_confiture_assortie">Confiture assortie</string>
    <string name="recipe_confiture_assortie_ingredients">Tout type de fruit</string>
    <string name="recipe_confiture_ananas">Confiture d\'ananas</string>
    <string name="recipe_confiture_ananas_ingredients">4 ananas</string>
    <string name="recipe_confiture_orange">Confiture d\'orange</string>
    <string name="recipe_confiture_orange_ingredients">4 oranges</string>
    <string name="recipe_confiture_fraise">Confiture de fraise</string>
    <string name="recipe_confiture_fraise_ingredients">x4 fraise</string>
    <string name="recipe_confiture_framboise">Confiture de framboise</string>
    <string name="recipe_confiture_framboise_ingredients">4 framboises</string>
    <string name="recipe_confiture_myrtille">Confiture de myrtille</string>
    <string name="recipe_confiture_myrtille_ingredients">4 myrtilles</string>
    <string name="recipe_confiture_pomme">Confiture de pomme</string>
    <string name="recipe_confiture_pomme_ingredients">4 pommes</string>
    <string name="recipe_confiture_raisin">Confiture de raisin</string>
    <string name="recipe_confiture_raisin_ingredients">x4 raisins</string>
    <string name="recipe_diner_chandelles">Dîner aux chandelles</string>
    <string name="recipe_diner_chandelles_ingredients">Salade de campagne-Bagel-Risotto fruit de mer-Tiramisu</string>
    <string name="codes">Codes</string>
    <string name="bugs">Insectes</string>
    <string name="fish">Poissons</string>
    <string name="birds">Oiseaux</string>
</resources>